<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="45dip"
                android:layout_weight="0.005" />

            <EditText
                android:id="@+id/txtNumeClient"
                android:layout_width="0dp"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:layout_weight="0.3"
                android:background="@drawable/edittext_style_1"
                android:gravity="bottom"
                android:inputType="textNoSuggestions"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/editTextColor1"
                android:textSize="19sp"
                android:typeface="monospace" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="45dip"
                android:layout_weight="0.005" />

            <Button
                android:id="@+id/btnCautaClient"
                style="@style/button_text_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_style_1"
                android:paddingLeft="50dip"
                android:paddingRight="50dip"
                android:text="@string/strCauta" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewClienti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:choiceMode="singleChoice"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutDetClient"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textNumeClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="@color/detColor1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginTop="15dip"
            android:text="Adaugare adresa"
            android:textColor="@color/detColor9"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginRight="10dip"
            android:background="@color/backColorObiective1" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinnerTipAdresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="left"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSaveGpsData"
                style="@style/button_text_3"
                android:layout_width="wrap_content"
                android:layout_height="45dip"
                android:layout_gravity="left|center"
                android:layout_marginLeft="70dip"
                android:background="@drawable/button_style_1"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/strSalveaza" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="Adrese existente"
            android:textColor="@color/detColor9"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginRight="10dip"
            android:background="@color/backColorObiective1" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listAdreseClient"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:choiceMode="singleChoice"
                android:dividerHeight="1.0sp"
                android:drawSelectorOnTop="false" />

            <ImageButton
                android:id="@+id/deleteAdrBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/delete_icon_" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>