<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E8E8E8"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="1dip"
    android:rotation="180" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dip"
            android:layout_weight="0.005" />

        <EditText
            android:id="@+id/txtNumeClient"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.3"
            android:background="@drawable/edittext_style_1"
            android:gravity="bottom"
            android:inputType="textNoSuggestions"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/editTextColor1"
            android:textSize="19sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="0.005" />

        <Button
            android:id="@+id/clientBtn"
            style="@style/button_text_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_style_1"
            android:paddingLeft="50dip"
            android:paddingRight="50dip"
            android:text="@string/strCauta" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06" />

        <ToggleButton
            android:id="@+id/tglTipClient"
            style="@style/button_text_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.15"
            android:background="@drawable/button_style_5"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:textOff="@string/strDistrib"
            android:textOn="Client ged" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listClienti"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:choiceMode="singleChoice"
            android:drawSelectorOnTop="false" />

        <LinearLayout
            android:id="@+id/layoutClient"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="5dip"
            android:layout_weight="0.35"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelCodClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Cod client"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textCodClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text=""
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/labelNumeClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="Nume client"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textNumeClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text=""
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/labelLimitaCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="Limita credit"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textLimitaCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/labelRestCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="Rest credit"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textRestCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/labelDiviziiClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="Divizii"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textDiviziiClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/labelAgentClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="Agent"
                android:textColor="@color/detColor1"
                android:textSize="16sp"
                android:typeface="sans"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinnerAgenti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/saveClntBtn"
                style="@style/button_text_1"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="right"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_style_1"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:text="@string/strSelecteaza" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>