<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.45"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtNumeClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_style_1"
            android:gravity="bottom"
            android:inputType="textNoSuggestions"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/editTextColor1"
            android:textSize="19sp"
            android:typeface="monospace" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.55"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/clientBtn"
                style="@style/button_text_1"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:background="@drawable/button_style_1"
                android:paddingLeft="50dip"
                android:paddingRight="50dip"
                android:text="@string/strCauta" />

            <View
                android:layout_width="30dip"
                android:layout_height="match_parent" >
            </View>

            <ToggleButton
                android:id="@+id/tglTipComanda"
                style="@style/button_text_1"
                android:layout_width="2dip"
                android:layout_height="40dip"
                android:background="@drawable/button_style_5"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:textOff="@string/strDistrib"
                android:textOn="Client ged"
                android:visibility="invisible" />

            <View
                android:layout_width="30dip"
                android:layout_height="match_parent" >
            </View>

            <CheckBox
                android:id="@+id/checkboxCmdAng"
                style="@style/checkbox_text_1"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:button="@drawable/checkbox_style_1"
                android:text="@string/strCmdAngaj" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio_cmd_ferma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@color/agentiColor"
                    android:text="Comanda ferma" />

                <RadioButton
                    android:id="@+id/radio_cmd_simulata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/agentiColor"
                    android:text="Comanda simulata fara rezervare de stoc" />
            </RadioGroup>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dip"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dip"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbars="vertical" >

            <LinearLayout
                android:id="@+id/resLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shape"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Nume client" />

                    <TextView
                        android:id="@+id/textNumeClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Cod client" />

                    <TextView
                        android:id="@+id/textCodClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Adresa" />

                    <TextView
                        android:id="@+id/textAdrClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Limita credit" />

                    <TextView
                        android:id="@+id/textLimitaCredit"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Rest credit" />

                    <TextView
                        android:id="@+id/textRestCredit"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Tip client" />

                    <TextView
                        android:id="@+id/tipClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Stare" />

                    <TextView
                        android:id="@+id/clientBlocat"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Filiala" />

                    <TextView
                        android:id="@+id/filClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Divizii" />

                    <TextView
                        android:id="@+id/diviziiClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Referinta client" />

                    <EditText
                        android:id="@+id/textRefClient"
                        style="@style/dateLivrareDlValori"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:maxLength="35" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutAgentClient"
                    style="@style/dateLivrareDlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:visibility="invisible" >

                    <TextView
                        style="@style/dateLivrareDlLabel"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:text="Agent" />

                    <Spinner
                        android:id="@+id/spinnerAgenti"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>